Fix coffee button alignment

--- a/sass/views/_single.scss
+++ b/sass/views/_single.scss
@@ -824,6 +824,7 @@ body.post-type-archive-diary .container.container-article .entry-content .author
 }
 
 .button.button-bmc {
+  align-items: center;
   background-color: var(--color-white-three);
   border: 1px solid transparent;
   box-sizing: border-box;
